new SIMD "add-on" for vectorclass

--- a/six/modules/c++/six.sicd/include/six/sicd/vectorclass/version2/changelog.txt
+++ b/six/modules/c++/six.sicd/include/six/sicd/vectorclass/version2/changelog.txt
@@ -1,5 +1,9 @@
 Change log for Vector class library
 -----------------------------------
+
+2023-07-04 version 2.02.02
+  * remove various MS compiler warnings
+
 2022-06-03 version 2.02.01
   * minor bug fixes and updates
 
